# tmux-creator

./: Cargo.toml  Makefile  README.md
.github/workflows/: manual.rust.yml
neovim-plugin/: Cargo.toml
neovim-plugin/src/: event.rs  event_handler.rs  exception.rs  lib.rs  main.rs  messages.rs  neovim_handler.rs  window_builder.rs
neovim-plugin/src/neovim/: command.rs  event.rs  event_handler.rs  exception.rs  messages.rs  mod.rs
plugin/: tmux-creator.vim
rpc-api/: Cargo.toml
src/: config.rs  exception.rs  lib.rs  main.rs  parser.rs  session.rs  tmux.rs
tests/: Cargo.toml  config_test.yml  test_log.txt  test_parse_config.rs
tests/src/: main.rs  test_event.rs  test_logger.rs  test_parse_config.rs
tmux-executor/: Cargo.toml
tmux-executor/src/: exception.rs  main.rs  parse.rs
tmux-lib/: Cargo.toml  config_test.yml
tmux-lib/src/: config.rs  event.rs  exception.rs  executor.rs  lib.rs  parser.rs  session.rs
tmux-lib/src/logger/: exception.rs  infra.rs  mod.rs  output.rs
tmux-lib/src/neovim/: command.rs  event.rs  exception.rs  messages.rs
tmux-lib/tests/: test_parse_config.rs
vim/autoload/tmcr/shared/: bindings.vim  cli.vim  kill.vim  list.vim  open.vim  utils.vim
vim/plugin/: tmcr.vim
