[package]
name = "tmux-creator"
version = "0.1.0"
authors = ["Rolf1e <tigran.slama@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
home = "0.5.3"
