[package]
name = "neovim-plugin"
version = "0.1.0"
authors = ["Rolf1e <tigran.slama@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# neovim-lib = "0.6.1"
nvim-rs = "0.2.0"
tmux-lib = { path = "../tmux-lib" }
tokio = { version = "1.1.1", features = ["full"] }
tokio-util = "0.6.6"
