[package]
name = "neovim-plugin"
version = "0.1.0"
authors = ["Rolf1e <tigran.slama@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux-lib = { path = "../tmux-lib" }
async-trait = "0.1.22"
tokio-util = { version = "0.6.3", features = ["compat"], optional = true }
futures = "0.3.12"
nvim-rs = { version = "0.2", features = ["use_tokio"] }
tokio = { version = "0.2.8", features = ["full"] }
rmpv = "0.4.3"
