[package]
name = "tests"
version = "0.1.0"
authors = ["Rolf1e <tigran.slama@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux-lib = { path = "../tmux-lib" }
neovim-plugin = { path = "../neovim-plugin" }
# neovim-lib = "0.6.1"
nvim-rs = "0.2.0"
mock_derive = "0.8.0"
