[package]
name = "tests"
version = "0.1.0"
authors = ["Rolf1e <tigran.slama@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-rs = { version = "0.2", features = ["use_tokio"] }
tmux-lib = { path = "../tmux-lib" }
tokio = { version = "1.1.1", features = ["full"] }
mock_derive = "0.8.0"
